--- a/Unity Course Examples/Haunted Zombie Rush/Haunted Zombie Rush.csproj
+++ b/Unity Course Examples/Haunted Zombie Rush/Haunted Zombie Rush.csproj
@@ -76,7 +76,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Platform.cs" />
+    <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\Rock.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Zombie\models\animation list.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
