--- a/Unity Course Examples/Haunted Zombie Rush/Haunted Zombie Rush.csproj
+++ b/Unity Course Examples/Haunted Zombie Rush/Haunted Zombie Rush.csproj
@@ -75,6 +75,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Coin.cs" />
+    <Compile Include="Assets\Scripts\CoinSpawner.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Platform.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
